Updated dependency versions and made minor alterations to README.md

--- a/bower.json
+++ b/bower.json
@@ -15,10 +15,10 @@
     "url": "https://github.com/AxonInteractive/angularjs-utilities.git"
   },
   "dependencies": {
-    "angular"                   : "~1.2.26",
-    "angular-ui-bootstrap-bower": "~0.11.2",
-    "angular-ui-router"         : "~0.2.11",
-    "bootstrap-css-only"        : "~3.2.0"
+    "angular"                   : "~1.3.13",
+    "angular-ui-bootstrap-bower": "~0.12.0",
+    "angular-ui-router"         : "~0.2.13",
+    "bootstrap-css-only"        : "~3.3.2"
   },
   "devDependencies": {},
   "ignore": [
@@ -35,5 +35,8 @@
   "bugs": {
     "email": "theteam@axoninteractive.ca",
     "url": "https://github.com/AxonInteractive/angularjs-utilities/issues"
-  }
+  },
+  "keywords": [
+    ""
+  ]
 }
