Updated npm version and package names in advance for registering this as a Bower package.

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "angularjs-utilities",
+  "name": "axon-angularjs-utilities",
   "version": "0.0.2",
   "description": "A collection of helpful utilities for AngularJS used in Axon's projects.",
   "authors": [
