--- a/bower.json
+++ b/bower.json
@@ -24,10 +24,10 @@
     "url": "https://github.com/AxonInteractive/angularjs-utilities.git"
   },
   "dependencies": {
-    "angular": "~1.3.13",
-    "angular-ui-bootstrap-bower": "~0.12.0",
-    "angular-ui-router": "~0.2.13",
-    "bootstrap-css-only": "~3.3.2"
+    "angular"                   : "1.3.13",
+    "angular-ui-bootstrap-bower": "0.12.0",
+    "angular-ui-router"         : "0.2.13",
+    "bootstrap-css-only"        : "3.3.2"
   },
   "devDependencies": {},
   "ignore": [
@@ -38,7 +38,7 @@
     "app/**/.*",
     "bower_components",
     "node_modules",
-    "gulpfile.js",
+    "Gruntfile.js",
     "package.json"
   ],
   "bugs": {
