--- a/bower.json
+++ b/bower.json
@@ -24,10 +24,10 @@
     "url": "https://github.com/AxonInteractive/angularjs-utilities.git"
   },
   "dependencies": {
-    "angular": "1.3.13",
-    "angular-ui-bootstrap-bower": "0.12.0",
-    "angular-ui-router": "0.2.13",
-    "bootstrap-css-only": "3.3.2"
+    "angular"                   : "^1.4.7",
+    "angular-ui-bootstrap-bower": "^0.13.4",
+    "angular-ui-router"         : "^0.2.15",
+    "bootstrap-css-only"        : "^3.3.5"
   },
   "devDependencies": {},
   "ignore": [
